Collada Animation Export Failure #52065

Closed
opened 2017-07-15 06:33:38 +02:00 by Phi · 12 comments

System Information
macOS Sierra Version 10.12.5

Blender Version
Broken: 2.78.5 (2.79)
Worked: 2.78

Short description of error
Collada Animation Export Failure

I was able to resolve the issue by removing "Spider_Armature_" from each node id for type "JOINT"

So the block you want to look at is in <library_visual_scenes>

The first node has id "Spider_Armature" and is of type "NODE"

Each node of type "JOINT" in this section has "Spider_Armature_" appended to its id.

And thanks for all the hard work you guys put into Blender, I appreciate it.

Update
Please ignore what I posted before as a possible solution. After more testing I discovered my workaround didn't really fix the issue, in other animations I tested, incorrect joints were moving/scaling.

I also wanted to be more clear about what I mean by export failure. Normally when I export using the Collada option, I can preview the animation directly from Finder in macOS, by selecting it and hitting spacebar, or using the preview app. But in 2.78.5 (2.79), when I export a character with animation, I can only view the mesh, but there's no animation.

If you need me to elaborate on anything please let me know.

Update2:

I added four new attachments, the two files labeled 278 are the ones working, 2785 are the ones that are not working.

The files contain a Lamp with an armature consisting of 4 bones, performing a single hop.

Also another note about strange behavior, in the file where the animation is working, the exported animation has scaling in it. If you watch the animation from within Blender there is no scaling during the animation.

Exact steps for others to reproduce the error
click File > Export > Collada > Export Collada
spider.blend

LampHop278.blend
LampHop278.dae
LampHop2785.blend
LampHop2785.dae

**System Information** macOS Sierra Version 10.12.5 **Blender Version** Broken: 2.78.5 (2.79) Worked: 2.78 **Short description of error** Collada Animation Export Failure I was able to resolve the issue by removing "Spider_Armature_" from each node id for type "JOINT" So the block you want to look at is in <library_visual_scenes> The first node has id "Spider_Armature" and is of type "NODE" Each node of type "JOINT" in this section has "Spider_Armature_" appended to its id. And thanks for all the hard work you guys put into Blender, I appreciate it. *Update* Please ignore what I posted before as a possible solution. After more testing I discovered my workaround didn't really fix the issue, in other animations I tested, incorrect joints were moving/scaling. I also wanted to be more clear about what I mean by export failure. Normally when I export using the Collada option, I can preview the animation directly from Finder in macOS, by selecting it and hitting spacebar, or using the preview app. But in 2.78.5 (2.79), when I export a character with animation, I can only view the mesh, but there's no animation. If you need me to elaborate on anything please let me know. Update2: I added four new attachments, the two files labeled 278 are the ones working, 2785 are the ones that are not working. The files contain a Lamp with an armature consisting of 4 bones, performing a single hop. Also another note about strange behavior, in the file where the animation is working, the exported animation has scaling in it. If you watch the animation from within Blender there is no scaling during the animation. **Exact steps for others to reproduce the error** click File > Export > Collada > Export Collada [spider.blend](https://archive.blender.org/developer/F667599/spider.blend) [LampHop278.blend](https://archive.blender.org/developer/F670047/LampHop278.blend) [LampHop278.dae](https://archive.blender.org/developer/F670048/LampHop278.dae) [LampHop2785.blend](https://archive.blender.org/developer/F670050/LampHop2785.blend) [LampHop2785.dae](https://archive.blender.org/developer/F670051/LampHop2785.dae)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Phi

Added subscriber: @Phi

Added subscribers: @GaiaClary, @mont29

Added subscribers: @GaiaClary, @mont29
Gaia Clary was assigned by Bastien Montagne 2017-07-16 19:39:15 +02:00

@GaiaClary I bet that one is for you ;)

@GaiaClary I bet that one is for you ;)
Member

If possible can you try to find a super simple example that demonstrates the failure in 2.78.5 but works in the 2.78 release? Then provide the blend and 2 collada files, one that works (exported from 2.78) and one that is broken (exported from 2.78.5). Then it is much easier to inspect the model and see what has gone wrong.

If you can not find a simple demo, then maybe you can still provide a working dae of the spider from 2.78 and a broken dae from 2.78.5 that would still help.
thanks!

If possible can you try to find a super simple example that demonstrates the failure in 2.78.5 but works in the 2.78 release? Then provide the blend and 2 collada files, one that works (exported from 2.78) and one that is broken (exported from 2.78.5). Then it is much easier to inspect the model and see what has gone wrong. If you can not find a simple demo, then maybe you can still provide a working dae of the spider from 2.78 and a broken dae from 2.78.5 that would still help. thanks!

This issue was referenced by 9feeb14e91

This issue was referenced by 9feeb14e916be5216f06e14e14f3a6f9309286e8
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Hi, Phi;

Thanks for reporting and helping to solve this issue by providing the extra demo files!
I believe that i have fixed the animation curve export issue. Please can you check that all is ok now and report back when it still fails?

Regarding the other issue about scaling, it may be better to create a new report for that, so things do not get mixed up. You can assign me directly if you like. Then i get notified right away :)

cheers,
Gaia

Hi, Phi; Thanks for reporting and helping to solve this issue by providing the extra demo files! I believe that i have fixed the animation curve export issue. Please can you check that all is ok now and report back when it still fails? Regarding the other issue about scaling, it may be better to create a new report for that, so things do not get mixed up. You can assign me directly if you like. Then i get notified right away :) cheers, Gaia
Author

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'
Phi reopened this issue 2017-07-18 03:11:35 +02:00
Author

I'm really new to Blender so I hope I'm following the correct steps to grab the latest build with your fix implemented.

  1. Visited https://builder.blender.org/download/

  2. Downloaded Mac OS X 64 bit Official blender-2.78-3d1e5bca88-OSX-10.6-x86_64.zip 114M Mon Jul 17 05:03:21 2017

  3. Removed old copy of Blender and ran new copy.

I've tested the Collada exporter with the original lamp blend files and also other blend animations that exported correctly in the previous version 2.78. As far as I could tell, it appears the changes implemented did not resolve the issue. I'm seeing the same behavior as before, unable to play the animation in Preview app or in Xcode, when previously the animations were playable when exported from 2.78.

I thought my original workaround was the cause of the scaling issues, but I came to the conclusion that the scaling issues were most likely coming from my inexperience with Blender. Because whenever I would export other people's animated meshes (with my workaround), there was no scaling issues, only in mine.

I'll try to briefly describe my workaround again.

  1. Find <library_visual_scenes> section of collada file.
  2. For each Node of type Joint replace the id with the name.

e.g.
Original:
Corrected:

In the exported LampHop2785 file I manually implemented these changes to solve the issue.
I also wrote a short script to apply these changes to larger animations with hundreds of bones to verify the fix, testing with other people's blender animation files.

I'm happy to help Gaia, I appreciate the open communication and the hard work of the Blender community.

About assigning task to you, I don't know how Blender operates, like is there a team of people working on Collada or is it just you? If there's a team I'd like to assign task in such a way that it's not piled onto one person. But thanks again and I hope you make more progress on this issue, I'll keep researching this issue further to see what other possible fixes there could be.

I'm really new to Blender so I hope I'm following the correct steps to grab the latest build with your fix implemented. 1. Visited https://builder.blender.org/download/ 2. Downloaded Mac OS X 64 bit Official blender-2.78-3d1e5bca88-OSX-10.6-x86_64.zip 114M Mon Jul 17 05:03:21 2017 3. Removed old copy of Blender and ran new copy. I've tested the Collada exporter with the original lamp blend files and also other blend animations that exported correctly in the previous version 2.78. As far as I could tell, it appears the changes implemented did not resolve the issue. I'm seeing the same behavior as before, unable to play the animation in Preview app or in Xcode, when previously the animations were playable when exported from 2.78. I thought my original workaround was the cause of the scaling issues, but I came to the conclusion that the scaling issues were most likely coming from my inexperience with Blender. Because whenever I would export other people's animated meshes (with my workaround), there was no scaling issues, only in mine. I'll try to briefly describe my workaround again. 1. Find <library_visual_scenes> section of collada file. 2. For each Node of type Joint replace the id with the name. e.g. Original: <node id="LampRig_Base" name="Base" sid="Base" type="JOINT"> Corrected: <node id="Base" name="Base" sid="Base" type="JOINT"> In the exported LampHop2785 file I manually implemented these changes to solve the issue. I also wrote a short script to apply these changes to larger animations with hundreds of bones to verify the fix, testing with other people's blender animation files. I'm happy to help Gaia, I appreciate the open communication and the hard work of the Blender community. About assigning task to you, I don't know how Blender operates, like is there a team of people working on Collada or is it just you? If there's a team I'd like to assign task in such a way that it's not piled onto one person. But thanks again and I hope you make more progress on this issue, I'll keep researching this issue further to see what other possible fixes there could be.
Author

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Phi closed this issue 2017-07-18 08:31:25 +02:00
Author

I just downloaded the most recent build, and your fix worked! Thanks so much for solving the issue, I'm really looking forward to using Blender thanks to you!

I just downloaded the most recent build, and your fix worked! Thanks so much for solving the issue, I'm really looking forward to using Blender thanks to you!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#52065
No description provided.