fix T52065: Joint ID was generated wrong for bone animation exports